Opened 9 years ago
Closed 9 years ago
#5275 closed bug (fixed)
ppc: kernel relocation failure - VM translation map?
Reported by: | andreasf | Owned by: | axeld |
---|---|---|---|
Priority: | blocker | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | Cc: | bonefish, kallisti5 | |
Blocked By: | Blocking: | #1048 | |
Has a Patch: | no | Platform: | PowerPC |
Description
The ppc kernel no longer loads at hrev35100.
readelf -s objects/haiku/ppc/release/system/kernel/kernel_ppc | grep UND
0: 00000000 0 NOTYPE LOCAL DEFAULT UND 3496: 00000000 0 NOTYPE GLOBAL DEFAULT UND _ZN19PPCVMTranslationMap1 0: 00000000 0 NOTYPE LOCAL DEFAULT UND 5385: 00000000 0 NOTYPE GLOBAL DEFAULT UND _ZN19PPCVMTranslationMap1
Therefore I assume this is related to hrev35089.
I can't spot the cause though: No typo in the new method signature, and the class PPCVMTranslationMap
existed before apparently.
Change History (4)
comment:1 Changed 9 years ago by
comment:2 Changed 9 years ago by
I'm taking a crack at this for now.. think I know whats up. Give me a few.
comment:3 Changed 9 years ago by
see changes in #5419, still gives same UND symbols but makes things more aligned to x86.. also stub'ed out some missing methods.
Note: See
TracTickets for help on using
tickets.
from #5417 :
reporter: kallisti5
summary: PPC: missing symbol: PPCVMTranslationMap
Tried to boot ppc this morning and noticed missing symbols...