Added missing PPCVMTranslationMap::QueryInterrupt(). Fixes #5275.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35516 a95241bf-73f2-0310-859d-f6bbb57e9c96